--- a/config-server/ms-test-dev.properties
+++ b/config-server/ms-test-dev.properties
@@ -1,2 +1,14 @@
 #
 key = values
+#add
+#Mon Oct 29 18:50:09 CST 2018
+testkey=testvalue
+key=values
+#add
+#Mon Oct 29 18:52:02 CST 2018
+testkey=testvalue
+key=values
+#add
+#Mon Oct 29 18:54:30 CST 2018
+testkey=testvalue
+key=values
