--- a/config-server/ms-test-dev.properties
+++ b/config-server/ms-test-dev.properties
@@ -1,4 +1,5 @@
-#add
-#Tue Oct 30 10:55:22 CST 2018
+#add key \uFF1A testkey2
+#Tue Oct 30 15:35:12 CST 2018
 testkey=testvalue
 key=values
+testkey2=testvalue
