spring cloud config jgit

--- a/config-server/ms-test-dev.properties
+++ b/config-server/ms-test-dev.properties
@@ -1,5 +1,5 @@
-#add key \uFF1A testkey2
-#Tue Oct 30 15:35:12 CST 2018
+#add key \uFF1A key
+#Wed Oct 31 16:45:47 CST 2018
 testkey=testvalue
 key=values
 testkey2=testvalue
