--- a/config-server/ms-test-dev.properties
+++ b/config-server/ms-test-dev.properties
@@ -1,5 +1,5 @@
 #add key \uFF1A key
-#Wed Oct 31 16:49:18 CST 2018
+#Wed Oct 31 16:49:56 CST 2018
 testkey=testvalue
-key=values22222
+key=values2sfsdf
 testkey2=testvalue
