spring cloud config jgit

--- a/config-server/ms-test-dev.properties
+++ b/config-server/ms-test-dev.properties
@@ -1,5 +1,4 @@
-#add key \uFF1A key
-#Wed Oct 31 16:49:56 CST 2018
+#del key : key
+#Wed Oct 31 17:05:29 CST 2018
 testkey=testvalue
-key=values2sfsdf
 testkey2=testvalue
