spring cloud config jgit

--- a/config-server/ms-test-dev.properties
+++ b/config-server/ms-test-dev.properties
@@ -1,4 +1,4 @@
-#del key : key
-#Wed Oct 31 17:05:29 CST 2018
+#add key \uFF1A testkey
+#Wed Oct 31 17:21:15 CST 2018
 testkey=testvalue
 testkey2=testvalue
