spring cloud config jgit

--- a/config-server/ms-test-test.properties
+++ b/config-server/ms-test-test.properties
@@ -1,4 +1,4 @@
-#add
-#Tue Oct 30 10:55:22 CST 2018
+#add key \uFF1A key
+#Wed Oct 31 17:24:10 CST 2018
 testkey=testvalue
-key=values
+key=values\u4E2D\u56FD
