--- a/config-server/ms-test-test.properties
+++ b/config-server/ms-test-test.properties
@@ -1,4 +1,3 @@
-#add key \uFF1A testkey
-#Wed Oct 31 17:25:37 CST 2018
-testkey=testvalue\u914D\u7F6E
-key=values\u4E2D\u56FD
+#add key \uFF1A test
+#Wed Oct 31 18:01:34 CST 2018
+test=local
