--- a/config-server/ms-test-test.properties
+++ b/config-server/ms-test-test.properties
@@ -1,5 +1,68 @@
-#add key \uFF1A test
-#Wed Oct 31 18:01:34 CST 2018
-test=local
-feth=test...
-key1=value1
+#add key \uFF1A server.port
+#Sat Dec 29 13:35:04 CST 2018
+feign.hystrix.enabled=true
+spring.jpa.properties.hibernate.connection.autocommit=true
+xm-ms-server.ribbon.ConnectTimeout=3000
+logging.file.max-size=50MB
+spring.jackson.date-format=yyyy-MM-dd HH\:mm\:ss
+spring.jpa.properties.hibernate.jdbc.fetch_size=100
+feign.compression.request.enabled=true
+hibernate.packages.scan=com.ms.bean.demo
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.http.encoding.charset=UTF-8
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+xm-ms-server.ribbon.NFLoadBalancePingClassName=com.netflix.loadbalancer.PingUrl
+eureka.instance.lease-renewal-interval-in-seconds=30
+server.port=8100
+eureka.client.serviceUrl.defaultZone=http\://10.3.151.72\:8761/eureka/  
+logging.level.com.ximucredit=DEBUG
+spring.datasource.test-while-idle=true  
+logging.pattern.console=[%d] [${spring.application.name},%X{X-B3-TraceId\:-},%X{X-B3-SpanId\:-},%X{X-Span-Export\:-}] [%thread] [${PID}] [%-5level] [%logger{30}\:%M\:%line] - [%msg]%n
+xm-ms-server.ribbon.ReadTimeout=1000
+spring.redis.password=123456
+xm-ms-server.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RandomRule
+eureka.instance.lease-expiration-duration-in-seconds=90
+server.tomcat.uri-encoding=UTF-8
+logging.level.com.ximu.service.FeignService=DEBUG
+spring.datasource.url=jdbc\:mysql\://10.3.151.72\:3306/test?createDatabaseIfNotExist\=true&useUnicode\=true&characterEncoding\=UTF-8&useSSL\=false
+logging.pattern.level=DEBUG
+spring.datasource.validation-query=SELECT 1;  
+spring.http.encoding.force=true
+spring.jpa.properties.hibernate.show_sql=true
+xm-ms-server.ribbon.MaxAutoRetriesNextServer=2
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
+spring.jpa.database=MYSQL
+spring.datasource.min-idle=10
+logging.file=/logs/${spring.application.name}.log
+spring.datasource.max-active=150
+feign.compression.response.enabled=true
+spring.jpa.properties.hibernate.format_sql=false
+spring.jackson.time-zone=GMT+8
+spring.jpa.properties.hibernate.jdbc.batch_size=100
+spring.application.name=ms-server
+feign.compression.request.mime-types=text/xml,application/xml,application/json
+spring.redis.port=6379
+spring.datasource.max-idle=50
+spring.datasource.test-on-borrow=true  
+feign.compression.request.min-request-size=2048
+spring.datasource.password=123456
+spring.datasource.username=root
+server.tomcat.basedir=/tmp
+spring.jpa.properties.hibernate.max_fetch_depth=3
+logging.level.root=DEBUG
+xm-ms-server.ribbon.OkToRetryOnAllOperations=true
+xm-ms-server.ribbon.MaxAutoRetries=1
+hystrix.stream.dashboard.intervalInMilliseconds=2000
+spring.http.encoding.enabled=true
+logging.level.org.springframework=DEBUG
+logging.path=/logs
+eureka.instance.preferIpAddress=true
+spring.datasource.initial-size=20
+hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.connection.release_mode=auto
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.aop.auto=true
+logging.pattern.file=[%d] [${spring.application.name},%X{X-B3-TraceId\:-},%X{X-B3-SpanId\:-},%X{X-Span-Export\:-}] [%thread] [${PID}] [%-5level] [%logger{30}\:%M\:%line] - [%msg]%n
+logging.level.org.hibernate.sql=DEBUG
+eureka.instance.appname=ms-server
+spring.redis.host=10.3.151.72
