--- a/config-server/ms-test-test.properties
+++ b/config-server/ms-test-test.properties
@@ -1,6 +1,6 @@
-#add key \uFF1A server.port
-#Sat Dec 29 13:35:04 CST 2018
-feign.hystrix.enabled=true
+#add key \uFF1A feign.hystrix.enabled
+#Sat Dec 29 14:11:43 CST 2018
+feign.hystrix.enabled=false
 spring.jpa.properties.hibernate.connection.autocommit=true
 xm-ms-server.ribbon.ConnectTimeout=3000
 logging.file.max-size=50MB
@@ -20,49 +20,49 @@ spring.datasource.test-while-idle=true
 logging.pattern.console=[%d] [${spring.application.name},%X{X-B3-TraceId\:-},%X{X-B3-SpanId\:-},%X{X-Span-Export\:-}] [%thread] [${PID}] [%-5level] [%logger{30}\:%M\:%line] - [%msg]%n
 xm-ms-server.ribbon.ReadTimeout=1000
 spring.redis.password=123456
-xm-ms-server.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RandomRule
 eureka.instance.lease-expiration-duration-in-seconds=90
+xm-ms-server.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RandomRule
 server.tomcat.uri-encoding=UTF-8
 logging.level.com.ximu.service.FeignService=DEBUG
-spring.datasource.url=jdbc\:mysql\://10.3.151.72\:3306/test?createDatabaseIfNotExist\=true&useUnicode\=true&characterEncoding\=UTF-8&useSSL\=false
 logging.pattern.level=DEBUG
-spring.datasource.validation-query=SELECT 1;  
+spring.datasource.url=jdbc\:mysql\://10.3.151.72\:3306/test?createDatabaseIfNotExist\=true&useUnicode\=true&characterEncoding\=UTF-8&useSSL\=false
 spring.http.encoding.force=true
+spring.datasource.validation-query=SELECT 1;  
 spring.jpa.properties.hibernate.show_sql=true
-xm-ms-server.ribbon.MaxAutoRetriesNextServer=2
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
+xm-ms-server.ribbon.MaxAutoRetriesNextServer=2
 spring.jpa.database=MYSQL
-spring.datasource.min-idle=10
 logging.file=/logs/${spring.application.name}.log
+spring.datasource.min-idle=10
 spring.datasource.max-active=150
 feign.compression.response.enabled=true
-spring.jpa.properties.hibernate.format_sql=false
 spring.jackson.time-zone=GMT+8
+spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.jdbc.batch_size=100
 spring.application.name=ms-server
 feign.compression.request.mime-types=text/xml,application/xml,application/json
 spring.redis.port=6379
-spring.datasource.max-idle=50
-spring.datasource.test-on-borrow=true  
 feign.compression.request.min-request-size=2048
+spring.datasource.test-on-borrow=true  
+spring.datasource.max-idle=50
 spring.datasource.password=123456
 spring.datasource.username=root
 server.tomcat.basedir=/tmp
-spring.jpa.properties.hibernate.max_fetch_depth=3
 logging.level.root=DEBUG
+spring.jpa.properties.hibernate.max_fetch_depth=3
 xm-ms-server.ribbon.OkToRetryOnAllOperations=true
-xm-ms-server.ribbon.MaxAutoRetries=1
-hystrix.stream.dashboard.intervalInMilliseconds=2000
 spring.http.encoding.enabled=true
+hystrix.stream.dashboard.intervalInMilliseconds=2000
+xm-ms-server.ribbon.MaxAutoRetries=1
 logging.level.org.springframework=DEBUG
 logging.path=/logs
 eureka.instance.preferIpAddress=true
 spring.datasource.initial-size=20
-hibernate.hbm2ddl.auto=update
-spring.jpa.properties.hibernate.connection.release_mode=auto
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.aop.auto=true
 logging.pattern.file=[%d] [${spring.application.name},%X{X-B3-TraceId\:-},%X{X-B3-SpanId\:-},%X{X-Span-Export\:-}] [%thread] [${PID}] [%-5level] [%logger{30}\:%M\:%line] - [%msg]%n
-logging.level.org.hibernate.sql=DEBUG
+spring.aop.auto=true
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.connection.release_mode=auto
+hibernate.hbm2ddl.auto=update
 eureka.instance.appname=ms-server
+logging.level.org.hibernate.sql=DEBUG
 spring.redis.host=10.3.151.72
