--- a/config-server/ms-test-test.properties
+++ b/config-server/ms-test-test.properties
@@ -1,68 +1,68 @@
-#add key \uFF1A feign.hystrix.enabled
-#Sat Dec 29 14:11:43 CST 2018
-feign.hystrix.enabled=false
-spring.jpa.properties.hibernate.connection.autocommit=true
-xm-ms-server.ribbon.ConnectTimeout=3000
-logging.file.max-size=50MB
-spring.jackson.date-format=yyyy-MM-dd HH\:mm\:ss
-spring.jpa.properties.hibernate.jdbc.fetch_size=100
-feign.compression.request.enabled=true
-hibernate.packages.scan=com.ms.bean.demo
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.http.encoding.charset=UTF-8
-spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
-xm-ms-server.ribbon.NFLoadBalancePingClassName=com.netflix.loadbalancer.PingUrl
-eureka.instance.lease-renewal-interval-in-seconds=30
-server.port=8100
-eureka.client.serviceUrl.defaultZone=http\://10.3.151.72\:8761/eureka/  
-logging.level.com.ximucredit=DEBUG
-spring.datasource.test-while-idle=true  
-logging.pattern.console=[%d] [${spring.application.name},%X{X-B3-TraceId\:-},%X{X-B3-SpanId\:-},%X{X-Span-Export\:-}] [%thread] [${PID}] [%-5level] [%logger{30}\:%M\:%line] - [%msg]%n
-xm-ms-server.ribbon.ReadTimeout=1000
-spring.redis.password=123456
+#update key  feign.hystrix.enabled=true
+#update time  Sat Dec 29 14:25:10 CST 2018
+eureka.client.serviceUrl.defaultZone=http://10.3.151.72:8761/eureka/  
+eureka.instance.appname=ms-server
 eureka.instance.lease-expiration-duration-in-seconds=90
-xm-ms-server.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RandomRule
-server.tomcat.uri-encoding=UTF-8
-logging.level.com.ximu.service.FeignService=DEBUG
-logging.pattern.level=DEBUG
-spring.datasource.url=jdbc\:mysql\://10.3.151.72\:3306/test?createDatabaseIfNotExist\=true&useUnicode\=true&characterEncoding\=UTF-8&useSSL\=false
-spring.http.encoding.force=true
-spring.datasource.validation-query=SELECT 1;  
-spring.jpa.properties.hibernate.show_sql=true
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
-xm-ms-server.ribbon.MaxAutoRetriesNextServer=2
-spring.jpa.database=MYSQL
-logging.file=/logs/${spring.application.name}.log
-spring.datasource.min-idle=10
-spring.datasource.max-active=150
+eureka.instance.lease-renewal-interval-in-seconds=30
+eureka.instance.preferIpAddress=true
+feign.compression.request.enabled=true
+feign.compression.request.mime-types=text/xml,application/xml,application/json
+feign.compression.request.min-request-size=2048
 feign.compression.response.enabled=true
+feign.hystrix.enabled=true
+hibernate.hbm2ddl.auto=update
+hibernate.packages.scan=com.ms.bean.demo
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
+hystrix.stream.dashboard.intervalInMilliseconds=2000
+logging.file=/logs/${spring.application.name}.log
+logging.file.max-size=50MB
+logging.level.com.ximu.service.FeignService=DEBUG
+logging.level.com.ximucredit=DEBUG
+logging.level.org.hibernate.sql=DEBUG
+logging.level.org.springframework=DEBUG
+logging.level.root=DEBUG
+logging.path=/logs
+logging.pattern.console=[%d] [${spring.application.name},%X{X-B3-TraceId:-},%X{X-B3-SpanId:-},%X{X-Span-Export:-}] [%thread] [${PID}] [%-5level] [%logger{30}:%M:%line] - [%msg]%n
+logging.pattern.file=[%d] [${spring.application.name},%X{X-B3-TraceId:-},%X{X-B3-SpanId:-},%X{X-Span-Export:-}] [%thread] [${PID}] [%-5level] [%logger{30}:%M:%line] - [%msg]%n
+logging.pattern.level=DEBUG
+server.port=8100
+server.tomcat.basedir=/tmp
+server.tomcat.uri-encoding=UTF-8
+spring.aop.auto=true
+spring.application.name=ms-server
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.initial-size=20
+spring.datasource.max-active=150
+spring.datasource.max-idle=50
+spring.datasource.min-idle=10
+spring.datasource.password=123456
+spring.datasource.test-on-borrow=true  
+spring.datasource.test-while-idle=true  
+spring.datasource.url=jdbc:mysql://10.3.151.72:3306/test?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=root
+spring.datasource.validation-query=SELECT 1;  
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
+spring.jpa.database=MYSQL
+spring.jpa.properties.hibernate.connection.autocommit=true
+spring.jpa.properties.hibernate.connection.release_mode=auto
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.jdbc.batch_size=100
-spring.application.name=ms-server
-feign.compression.request.mime-types=text/xml,application/xml,application/json
-spring.redis.port=6379
-feign.compression.request.min-request-size=2048
-spring.datasource.test-on-borrow=true  
-spring.datasource.max-idle=50
-spring.datasource.password=123456
-spring.datasource.username=root
-server.tomcat.basedir=/tmp
-logging.level.root=DEBUG
+spring.jpa.properties.hibernate.jdbc.fetch_size=100
 spring.jpa.properties.hibernate.max_fetch_depth=3
-xm-ms-server.ribbon.OkToRetryOnAllOperations=true
-spring.http.encoding.enabled=true
-hystrix.stream.dashboard.intervalInMilliseconds=2000
-xm-ms-server.ribbon.MaxAutoRetries=1
-logging.level.org.springframework=DEBUG
-logging.path=/logs
-eureka.instance.preferIpAddress=true
-spring.datasource.initial-size=20
-logging.pattern.file=[%d] [${spring.application.name},%X{X-B3-TraceId\:-},%X{X-B3-SpanId\:-},%X{X-Span-Export\:-}] [%thread] [${PID}] [%-5level] [%logger{30}\:%M\:%line] - [%msg]%n
-spring.aop.auto=true
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.jpa.properties.hibernate.connection.release_mode=auto
-hibernate.hbm2ddl.auto=update
-eureka.instance.appname=ms-server
-logging.level.org.hibernate.sql=DEBUG
+spring.jpa.properties.hibernate.show_sql=true
 spring.redis.host=10.3.151.72
+spring.redis.password=123456
+spring.redis.port=6379
+xm-ms-server.ribbon.ConnectTimeout=3000
+xm-ms-server.ribbon.MaxAutoRetries=1
+xm-ms-server.ribbon.MaxAutoRetriesNextServer=2
+xm-ms-server.ribbon.NFLoadBalancePingClassName=com.netflix.loadbalancer.PingUrl
+xm-ms-server.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RandomRule
+xm-ms-server.ribbon.OkToRetryOnAllOperations=true
+xm-ms-server.ribbon.ReadTimeout=1000
