spring cloud config jgit

--- a/config-server/ms-test-test.properties
+++ b/config-server/ms-test-test.properties
@@ -1,5 +1,5 @@
-#update key  feign.hystrix.enabled=true
-#update time  Sat Dec 29 14:25:10 CST 2018
+#update key  feign.compression.request.min-request-size=2048
+#update time  Sat Dec 29 14:48:36 CST 2018
 eureka.client.serviceUrl.defaultZone=http://10.3.151.72:8761/eureka/  
 eureka.instance.appname=ms-server
 eureka.instance.lease-expiration-duration-in-seconds=90
