spring cloud config jgit

--- a/config-server/ms-test-test.properties
+++ b/config-server/ms-test-test.properties
@@ -1,5 +1,5 @@
-#update key  feign.compression.response.enabled=true
-#update time  Sat Dec 29 14:51:25 CST 2018
+#update key  hibernate.packages.scan=com.ms.bean.demo
+#update time  Sat Dec 29 14:52:04 CST 2018
 eureka.client.serviceUrl.defaultZone=http://10.3.151.72:8761/eureka/  
 eureka.instance.appname=ms-server
 eureka.instance.lease-expiration-duration-in-seconds=90
