--- a/config-server/ms-test-test.properties
+++ b/config-server/ms-test-test.properties
@@ -1,5 +1,5 @@
-#update key  feign.compression.request.enabled=true
-#update time  Sat Dec 29 15:19:32 CST 2018
+#update key  eureka.instance.preferIpAddress=true
+#update time  Sat Dec 29 15:21:17 CST 2018
 eureka.client.serviceUrl.defaultZone=http://10.3.151.72:8761/eureka/  
 eureka.instance.appname=ms-server
 eureka.instance.lease-expiration-duration-in-seconds=90
